branches/wip/Archive/a7cfc569c7e4bd148f55982609013e20-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘struct Arf<int>’:
main.cpp:28:14:   required from here
main.cpp:22:29: error: no members matching ‘Arf_woof_part<int>::Woof’ in ‘struct Arf_woof_part<int>’
     using Arf_woof_part<T>::Woof;
                             ^
main.cpp: In function ‘int main()’:
main.cpp:28:14: warning: unused variable ‘ohno’ [-Wunused-variable]
     Arf<int> ohno; // :C
              ^
main.cpp: In instantiation of ‘void Arf<T>::Woof(special_t) [with T = short int; special_t = int]’:
main.cpp:27:17:   required from here
main.cpp:18:10: warning: unused parameter ‘a’ [-Wunused-parameter]
     void Woof ( special_t a ) {
          ^
